# PhotoRoll3D

./: CMakeLists.txt  README.md
pages/: home.qml
pages/utils/: CLabel.qml  PLabel.qml  Page.qml  displaymodes.js
src/: appinterface.cpp  appinterface.h  general_shader_frag.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
